--- a/shopapp-backend/src/main/resources/application.yml
+++ b/shopapp-backend/src/main/resources/application.yml
@@ -1,12 +1,12 @@
 server:
-  port: 8088  
+  port: 8088
 spring:
   datasource:
-    url: ${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3307/ShopApp?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true}
+    url: ${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/ShopApp?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=false}
     #url: ${SPRING_DATASOURCE_URL:jdbc:mysql://ubuntu-server-01.local:3399/ShopApp?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true}
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
-    password: ${MYSQL_ROOT_PASSWORD:Abc123456789@}
+    password:
   jpa:
     show-sql: true
     hibernate:
@@ -41,7 +41,7 @@ spring:
       use-redis-cache: false
       host: ${REDIS_HOST:localhost} # Default to 'localhost' if not provided
       #host: ${REDIS_HOST:ubuntu-server-01.local} # Default to 'localhost' if not provided
-      port: ${REDIS_PORT:6379}      # Default to 6379 if not provided
+      port: ${REDIS_PORT:6379} # Default to 6379 if not provided
   kafka:
     client:
       dns:
@@ -55,7 +55,7 @@ spring:
     consumer:
       value-deserializer: org.apache.kafka.common.serialization.ByteArrayDeserializer
   security:
-    oauth2:      
+    oauth2:
       client:
         registration:
           facebook:
@@ -95,5 +95,3 @@ management:
       exposure:
         #include: "health"
         include: "health, info"
-
-
